--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <a href="#" class="social-link">Twitter</a>
                     <a href="#" class="social-link">LinkedIn</a>
                     <a href="#" class="social-link">GitHub</a>
+                    <a href="#" class="social-link">GitHub</a>
                 </div>
             </div>
         </div>
